--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,7 +12,7 @@ jobs:
       - name: checkout
         uses: actions/checkout@v4
       - name: build_and_deploy
-        uses: shalzz/zola-deploy-action
+        uses: shalzz/zola-deploy-action@v0.19.1
         env:
           # Target branch
           PAGES_BRANCH: gh-pages
