Cleanup ci file

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Zola on GitHub Pages
+name: Build on PR, Deploy on Main
 
 on:
   push:
@@ -18,8 +18,6 @@ jobs:
         env:
           BUILD_ONLY: true
           BUILD_FLAGS: --drafts
-          # A GitHub token is not necessary when BUILD_ONLY is true
-          # GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   build_and_deploy:
     runs-on: ubuntu-latest
